[package]
authors = ["Emirhan TALA <emirhantala99ff99@gmail.com>"]
name = "amongos"
version = "0.11.0"
edition = "2021"


[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
x86_64 = "0.14.2"
spin = "0.5.2"
volatile = "0.2.6"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33
test-timeout = 300

run-command = [
    "qemu-system-x86_64", "-drive", "format=raw,file={}"
]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false